cleanup + read item from database only when procesing it + refactored tests