@@ -4,12 +4,11 @@ import com.siemens.internship.model.Item;
 import com.siemens.internship.repository.ItemRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -18,18 +17,18 @@ import java.util.stream.Collectors;
 @Service
 public class ItemService {
     private static final Logger logger = LoggerFactory.getLogger(ItemService.class);
-    
-    @Autowired
-    private ItemRepository itemRepository;
-    private static final ExecutorService executor = Executors.newFixedThreadPool(10);
-    private final List<Item> processedItems = new ArrayList<>();
-    private int processedCount = 0;
-    
+
+    private final ItemRepository itemRepository;
+
     // Thread-safe map to store processing status
-    private final ConcurrentHashMap<Long, ProcessingStatus> processingStatus = new ConcurrentHashMap<>();
-    
+    private final ConcurrentHashMap<Long, ProcessingStatus> idToProcessingStatusMap = new ConcurrentHashMap<>();
+
     // Atomic counter for tracking completed items
     private final AtomicInteger completedItems = new AtomicInteger(0);
+
+    public ItemService(ItemRepository itemRepository) {
+        this.itemRepository = itemRepository;
+    }
 
     public List<Item> findAll() {
         return itemRepository.findAll();
@@ -49,57 +48,66 @@ public class ItemService {
 
     /**
      * Process a single item asynchronously
-     * @param item The item to process
+     *
+     * @param itemId The id of the item to process
      * @return CompletableFuture containing the processed item
      */
     @Async
-    public CompletableFuture<Item> processItem(Item item) {
+    public CompletableFuture<Item> processItem(long itemId) {
         try {
-            logger.info("Starting processing of item: {}", item.getId());
-            
+            logger.info("Starting processing of item: {}", itemId);
+
             // Update processing status
-            processingStatus.put(item.getId(), ProcessingStatus.IN_PROGRESS);
-            
+            idToProcessingStatusMap.put(itemId, ProcessingStatus.IN_PROGRESS);
+
+            // Read from the database
+            Item item = itemRepository.findById(itemId)
+                    .orElseThrow(() -> new IllegalArgumentException("Item not found"));
+
             // Simulate processing time (replace with actual processing logic)
             Thread.sleep(1000);
-            
-            // Your actual item processing logic here
-            Item processedItem = processItemLogic(item);
-            
+
+            // Set the status to PROCESSED
+            item.setStatus("PROCESSED");
+
+            // Save the updated item to the database
+            Item processedItem = itemRepository.save(item);
+
             // Update status and counter
-            processingStatus.put(item.getId(), ProcessingStatus.COMPLETED);
+            idToProcessingStatusMap.put(item.getId(), ProcessingStatus.COMPLETED);
             completedItems.incrementAndGet();
-            
+
             logger.info("Completed processing of item: {}", item.getId());
             return CompletableFuture.completedFuture(processedItem);
-            
+
         } catch (Exception e) {
-            logger.error("Error processing item: {}", item.getId(), e);
-            processingStatus.put(item.getId(), ProcessingStatus.FAILED);
+            logger.error("Error processing item: {}", itemId, e);
+            idToProcessingStatusMap.put(itemId, ProcessingStatus.FAILED);
             return CompletableFuture.failedFuture(e);
         }
     }
 
     /**
      * Process all items asynchronously and collect results
-     * @param items List of items to process
+     *
      * @return CompletableFuture containing list of processed items
      */
-    public CompletableFuture<List<Item>> processAllItems(List<Item> items) {
-        logger.info("Starting batch processing of {} items", items.size());
-        
+    public CompletableFuture<List<Item>> processAllItems() {
         // Reset processing status
-        processingStatus.clear();
+        idToProcessingStatusMap.clear();
         completedItems.set(0);
-        
+
+        List<Long> itemIds = itemRepository.findAllIds();
+        logger.info("Starting batch processing of {} items", itemIds.size());
+
         // Initialize status for all items
-        items.forEach(item -> processingStatus.put(item.getId(), ProcessingStatus.PENDING));
-        
+        itemIds.forEach(itemId -> idToProcessingStatusMap.put(itemId, ProcessingStatus.PENDING));
+
         // Create a list of CompletableFuture<Item> by processing each item asynchronously
-        List<CompletableFuture<Item>> futures = items.stream()
+        List<CompletableFuture<Item>> futures = itemIds.stream()
                 .map(this::processItem)
-                .collect(Collectors.toList());
-        
+                .toList();
+
         // Combine all futures and handle errors
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
                 .thenApply(v -> futures.stream()
@@ -111,42 +119,37 @@ public class ItemService {
                                 return null;
                             }
                         })
-                        .filter(item -> item != null)
+                        .filter(Objects::nonNull)
                         .collect(Collectors.toList()))
                 .whenComplete((result, throwable) -> {
                     if (throwable != null) {
                         logger.error("Error in batch processing", throwable);
                     } else {
-                        logger.info("Batch processing completed. Processed {} items successfully", 
-                            completedItems.get());
+                        logger.info("Batch processing completed. Processed {} items successfully",
+                                completedItems.get());
                     }
                 });
     }
 
     /**
      * Get the current processing status of an item
+     *
      * @param itemId The ID of the item
      * @return The current processing status
      */
     public ProcessingStatus getItemStatus(Long itemId) {
-        return processingStatus.getOrDefault(itemId, ProcessingStatus.UNKNOWN);
+        return idToProcessingStatusMap.getOrDefault(itemId, ProcessingStatus.UNKNOWN);
     }
 
     /**
      * Get the number of completed items
+     *
      * @return The number of completed items
      */
     public int getCompletedItemsCount() {
         return completedItems.get();
     }
 
-    // Private helper method for actual item processing logic
-    private Item processItemLogic(Item item) {
-        // Set the status to PROCESSED
-        item.setStatus("PROCESSED");
-        // Save the updated item to the database
-        return itemRepository.save(item);
-    }
 
     // Enum to track processing status
     public enum ProcessingStatus {
